--- a/index.html
+++ b/index.html
@@ -20,15 +20,28 @@
             background-color: #1a1a2e;
             color: #f5f5f5;
         }
-		
+		/* Flex container for top buttons */
+		.top-buttons {
+			display: flex;
+			flex-direction: column;  /* Stack buttons vertically */
+			align-items: flex-end;   /* Align to the right */
+			position: fixed;
+			top: 10px;
+			right: 10px;
+			gap: 10px;  /* Space between buttons */
+			z-index: 1000; /* Keep buttons on top */
+			white-space: nowrap;
+		}
 		/* Buttons */
-        .button {
-            padding: 10px 20px;
+        .button, .toggle-btn {
+            padding: 10px 15px;
             font-size: 1.2rem;
             border: none;
             border-radius: 8px;
             cursor: pointer;
             transition: background-color 0.3s;
+			background-color: #007bff;
+            color: white;
         }
         .light-mode .button {
             background-color: #007bff;
@@ -44,34 +57,7 @@
 		.button:active {
 			transform: scale(0.95);
 		}
-		.reset-button {
-		/* Mode Toggle Button */
-            position: absolute;
-            top: 60px;
-            right: 20px;
-            padding: 10px 20px;
-            font-size: 1rem;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            background-color: #007bff;
-            color: white;
-            transition: background-color 0.3s;
-		}
-		/* Mode Toggle Button */
-        .toggle-btn {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            padding: 10px 20px;
-            font-size: 1rem;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            background-color: #007bff;
-            color: white;
-            transition: background-color 0.3s;
-        }
+		
         .toggle-btn:hover {
             opacity: 0.8;
         }
@@ -127,9 +113,19 @@
             background-color: lightgray;
         }
         .container {
-            text-align: center;
-            margin-top: 20px;
-        }
+			display: flex;
+			flex-direction: column; /* Stack elements vertically */
+			align-items: center;
+			text-align: center;
+			width: 100%;
+		}
+		.container {
+			display: flex;
+			flex-direction: column; /* Stack elements vertically */
+			align-items: center;
+			text-align: center;
+			width: 100%;
+		}
         .result {
             margin-top: 20px;
             font-size: 1.5rem;
@@ -138,6 +134,9 @@
             display: flex;
             justify-content: center;
             gap: 20px;
+			flex-direction: row; /* Ensures the videos appear in a column */
+			align-items: center;
+			margin-bottom: 20px;
         }
         .video-item {
             cursor: pointer;
@@ -193,7 +192,7 @@
 			margin: 20px auto; /* Centers the player */
 			border-radius: 12px; /* Adds a rounded look */
 			box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Adds a slight shadow */
-		}
+		}	
 		@media (max-width: 768px) {
 			.video-list {
 				flex-direction: column;
@@ -203,9 +202,15 @@
 				width: 40px;
 				font-size: 1rem;
 			}
-			.button {
-				font-size: 1rem;
-				padding: 12px 24px;
+			.top-buttons {
+				right: 5px;
+				top: 5px;
+				gap: 5px;
+			}
+			
+			.button, .toggle-btn {
+				font-size: 0.9rem;  /* Slightly smaller for mobile */
+				padding: 8px 12px;
 			}
 		}
 		.fade-in {
@@ -215,31 +220,64 @@
 			from { opacity: 0; }
 			to { opacity: 1; }
 		}
+		#hiddenVideos {
+			display: none;
+			opacity: 0;
+			transition: opacity 0.5s ease-in-out;
+		}
+		#hiddenVideos.show {
+			display: block;
+			opacity: 1;
+		}
+		.video-container {
+			display: flex; /* Ensures proper alignment */
+			justify-content: center; /* Centers the video */
+			align-items: center; /* Centers vertically */
+			width: 80%; /* Adjust width as needed */
+			max-width: 1200px; /* Prevents it from being too large */
+			aspect-ratio: 16 / 9; /* Keeps the correct video aspect ratio */
+			margin: 20px auto; /* Centers the video on the page */
+		}
+
+		.video-container iframe, .video-container object, .video-container embed {
+			width: 100%; /* Makes the iframe take up the full width of its container */
+			height: auto; /* Automatically scales the height */
+			aspect-ratio: 16 / 9; /* Ensures the video maintains a proper aspect ratio */
+			border-radius: 12px; /* Optional: Adds rounded corners */
+			box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Optional: Adds a slight shadow */
+		}
 </style>
 </head>
 <body class="dark-mode">
-	<button class="toggle-btn" onclick="toggleMode()">Switch to Light Mode</button>
-	<button class="reset-button" onclick="restartQuiz()">Reset</button>
-    <div class="container">
-        <h1>Judgle</h1>
+	<div class="top-buttons">
+		<button class="toggle-btn" onclick="toggleMode()">Switch to Light Mode</button>
+		<button class="toggle-btn" onclick="restartQuiz()">Reset</button>
+		<button id="historyButton" class="toggle-btn" onclick="toggleVideoHistory()">View All</button>
+	</div>
+	    <div class="container">
+			<h1>Judgle</h1>
+			<!-- Video Library -->
+			<div class="container">
+				<div class="video-list">
+					<div class="video-item" onclick="loadVideo('video1')">
+						<!--<img src="video1-thumbnail.jpg" alt="Video 1" width="150">-->
+						<p>Video 1</p>
+					</div>
 
-        <!-- Video Library -->
-        <div class="video-list">
-            <div class="video-item" onclick="loadVideo('video1')">
-                <!--<img src="video1-thumbnail.jpg" alt="Video 1" width="150">-->
-                <p>Video 1</p>
-            </div>
-            <div class="video-item" onclick="loadVideo('video2')">
-                <!--<img src="video2-thumbnail.jpg" alt="Video 2" width="150">-->
-                <p>Video 2</p>
-            </div>
-        </div>
-
-        <!-- Video Embed -->
-        <div id="videoPlayer">
-            <!-- Will load selected video here -->
-        </div>
-
+					<!-- Hidden videos (will be shown when clicking "View History") -->
+					<div id="hiddenVideos" style="display: none;">
+						<div class="video-item" onclick="loadVideo('video2')">
+						<p>Video 2</p>
+					</div>
+				</div>			
+			</div>
+		</div>
+		<!-- Video Embed -->
+		<div class="video-container" id="videoPlayer">
+			<!-- Will load selected video here -->
+		</div>
+		
+		<div class="container">
         <!-- Number Input Section -->
         <div>
             <h3>Enter Your Deductions:</h3>
@@ -270,14 +308,16 @@
             </tbody>
         </table>
     </div>
-
+	<div>
+	<h3>Development in Progress.  All scores are test scores and not relevant to the video shown. Created by Jed</h3>
+	</div>
     <script>
         
 		
 		// Predefined video data with correct answers and explanations for each video
         const videoData = {
             video1: {
-                src: "TRA - Exam_1.mp4",
+                src: "https://www.youtube.com/embed/qkfBtD3IbNw",
                 correctAnswers: [1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 10],
                 explanations: [
                     "Explanation for answer 1...",
@@ -307,7 +347,7 @@
                 ]
             },
             video2: {
-                src: "TRA - Exam_2.mp4",
+                src: "https://www.youtube.com/embed/KAgB7tq25GI",
                 correctAnswers: [1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1],
                 explanations: [
                     "Explanation for answer 1...",
@@ -363,10 +403,11 @@
         function loadVideo(videoId) {
             const video = videoData[videoId];
             const videoPlayer = document.getElementById('videoPlayer');
-            videoPlayer.innerHTML = `<video controls>
-                                        <source src="${video.src}" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                      </video>`;
+            videoPlayer.innerHTML = `<iframe src="${video.src}"
+					frameborder="0"
+					allowfullscreen
+					>
+					</iframe>`;
 
 			// Remove 'active' class from all videos
 			document.querySelectorAll('.video-item').forEach(item => {
@@ -445,6 +486,22 @@
 			// Reset the table and result display
 			document.getElementById('answerTableBody').innerHTML = '';
 		}
+		
+		function toggleVideoHistory() {
+			const hiddenVideos = document.getElementById('hiddenVideos');
+			const historyButton = document.getElementById('historyButton');
+
+			if (hiddenVideos.style.display === "none") {
+				hiddenVideos.style.display = "block";
+				setTimeout(() => hiddenVideos.classList.add('show'), 10);
+				historyButton.innerText = "Hide All";
+			} else {
+				hiddenVideos.classList.remove('show');
+				setTimeout(() => hiddenVideos.style.display = "none", 500);
+				historyButton.innerText = "View All";
+			}
+		}
+		
 		
 		// Check answers and show results
         function checkAnswers() {
