--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			display: flex;
 			flex-direction: column;  /* Stack buttons vertically */
 			align-items: flex-end;   /* Align to the right */
-			position: fixed;
+			position: absolute;
 			top: 10px;
 			right: 10px;
 			gap: 10px;  /* Space between buttons */
