--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             color: white;
         }
         .light-mode .button {
-            background-color: #007bff;
+            background-color: #4caf50;
             color: white;
         }
         .dark-mode .button {
