--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
     <title>Judgle</title>
     <style>
         /* Light & Dark Mode Styles */
@@ -482,6 +485,34 @@
                     { min: 0, max: 0 }
                 ],
 				title: "2025-03-12 (DMT)",
+				releaseDate: "2025-03-17"
+            },
+			vid4: {
+                src: "https://www.youtube.com/embed/_lRiCGFKKrY",
+                correctAnswers: [1,3,2,3,2,3,3,5,2],
+                explanations: [
+                    "Explanation for answer 1...",
+                    "Explanation for answer 2...",
+					"Explanation for answer 3...",
+					"Explanation for answer 4...",
+					"Explanation for answer 5...",
+					"Explanation for answer 6...",
+					"Explanation for answer 7...",
+					"Explanation for answer 8...",
+                    "Explanation for answer 9..."
+                ],
+                ranges: [
+                    { min: 1, max: 1 },
+					{ min: 3, max: 3 },
+					{ min: 2, max: 3 },
+					{ min: 3, max: 3 },
+					{ min: 2, max: 3 },
+                    { min: 3, max: 3 },
+					{ min: 3, max: 3 },
+					{ min: 5, max: 5 },
+                    { min: 0, max: 2 }
+                ],
+				title: "2025-03-17 (TUM)",
 				releaseDate: "2025-03-17"
             }
         };
