--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
 			z-index: 1000;
 			opacity: 0; /* Start hidden */
 			transition: opacity 0.5s ease-in-out;
+			
 		}
 
 		/* Show Warning */
@@ -362,7 +363,7 @@
 			padding: 10px;
 			border-radius: 50%;
 			transition: background 0.3s ease-in-out, transform 0.2s ease;
-			position: relative;
+			//position: relative;
 		}
 
 		.help-icon:hover {
@@ -371,14 +372,14 @@
 		}
 
 		#helpMenu {
-			position: absolute;
-			top: 100%; /* Below the icon bar */
+			position: relative;
+			//top: 100%; /* Below the icon bar */
 			left: 50%;
 			transform: translateX(-50%);
 			width: 200px;
 			background: rgba(0, 0, 0, 0.8);
 			color: white;
-			padding: 5px;
+			padding: 10px;
 			border-radius: 8px;
 			text-align: left;
 			font-size: 0.8rem;
@@ -386,6 +387,9 @@
 			opacity: 0;
 			transition: opacity 0.3s ease-in-out;
 			display: none; /* Initially hidden */
+			justify-content: center; /* Centers icons */
+			gap: 15px;
+			width: fit-content; /* Only takes as much width as needed */
 		}
 
 		.light-mode #helpMenu {
@@ -406,19 +410,20 @@
 <body class="dark-mode">
 	<div class="top-icons">
 		 <h1 class="logo">Judgle</h1>
+
 		<i class="fas fa-adjust mode-toggle" title="Toggle Light/Dark Mode" onclick="toggleMode()"></i>
 		<i class="fas fa-undo reset-icon" title="Reset Quiz" onclick="restartQuiz()"></i>
 		<i class="fas fa-history history-icon" title="View History" id="historyButton" onclick="toggleVideoHistory()"></i>
 		<i class="fas fa-question-circle help-icon" title="Help" onclick="toggleHelpMenu()"></i>
-		<div id="helpMenu">
+	
+	</div>
+	
+		 		<div id="helpMenu">
 			<p><i class="fas fa-adjust"></i> Light/Dark Mode</p>
 			<p><i class="fas fa-undo"></i> Reset Answers</p>
 			<p><i class="fas fa-history"></i> View Video History</p>
-		</div>	
-	</div>
+		</div>
 	
-
-	<div id="warningMessage" class="hidden">Please fill in all deductions before submitting.</div>
 	    <div class="container">
 			<!-- Video Library -->
 			<div class="container">
@@ -439,6 +444,7 @@
 				</div>			
 			</div>
 		</div>
+		<div id="warningMessage" class="hidden">Please fill in all deductions before submitting.</div>
 		<!-- Video Embed -->
 		<div class="video-container" id="videoPlayer">
 			<!-- Will load selected video here -->
