--- a/index.html
+++ b/index.html
@@ -256,7 +256,11 @@
 			.video-container iframe, .video-container object, .video-container embed {
 				width: 100%
 			}
+			#helpMenu {
+				font-size: 0.8rem !important;
+			}
 		}
+		
 		.fade-in {
 			animation: fadeIn 0.5s ease-in-out;
 		}
@@ -330,7 +334,7 @@
 		}	
 		#warningMessage {
 			position: fixed;
-			top: 10px;
+			top: 50px;
 			left: 50%;
 			transform: translateX(-50%);
 			background-color: rgba(255, 0, 0, 0.8); /* Red background */
@@ -382,7 +386,7 @@
 			padding: 10px;
 			border-radius: 8px;
 			text-align: left;
-			font-size: 0.8rem;
+			font-size: 1rem;
 			box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
 			opacity: 0;
 			transition: opacity 0.3s ease-in-out;
@@ -390,6 +394,7 @@
 			justify-content: center; /* Centers icons */
 			gap: 15px;
 			width: fit-content; /* Only takes as much width as needed */
+			margin-top: 5px;
 		}
 
 		.light-mode #helpMenu {
@@ -647,7 +652,7 @@
             body.classList.toggle('light-mode');
             body.classList.toggle('dark-mode');
             const toggleButton = document.querySelector('.toggle-btn');
-            toggleButton.innerText = body.classList.contains('light-mode') ? 'Dark Mode' : 'Light Mode';
+            //toggleButton.innerText = body.classList.contains('light-mode') ? 'Dark Mode' : 'Light Mode';
         }
 		
 		// Load the selected video and corresponding range data
