--- a/index.html
+++ b/index.html
@@ -18,399 +18,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
     <title>Judgle</title>
-    <style>
-        /* Light & Dark Mode Styles */
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            transition: background-color 0.3s, color 0.3s;
-        }
-        .light-mode {
-            background-color: #f2f2f2;
-            color: #333;
-        }
-        .dark-mode {
-            background-color: #1a1a2e;
-            color: #f5f5f5;
-        }
-		
-		/* Buttons */
-        .button, .toggle-btn {
-            padding: 10px 15px;
-            font-size: 1.2rem;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-			background-color: #007bff;
-            color: white;
-        }
-        .light-mode .button {
-            background-color: #4caf50;
-            color: white;
-        }
-        .dark-mode .button {
-            background-color: #4caf50;
-            color: white;
-        }
-        .button:hover {
-            opacity: 0.8;
-        }
-		.button:active {
-			transform: scale(0.95);
-		}
-		
-        .toggle-btn:hover {
-            opacity: 0.8;
-        }
-		
-		.input-box {
-            width: 50px;
-            padding: 10px;
-            margin: 5px;
-            text-align: center;
-            font-size: 1.2rem;
-            border-radius: 8px;
-            border: none;
-            transition: transform 0.5s;
-            display: inline-block;
-        }
-		.input-container {
-			display: inline-block;
-			perspective: 1000px; /* Creates a 3D effect */
-		}
-		.flip-wrapper {
-			display: inline-block;
-			transition: transform 0.5s ease-in-out;
-			transform-style: preserve-3d;
-		}
-		.flip {
-            
-			animation: flip 500ms ease forwards;
-        }
-		@keyframes flip {
-		  0% {
-			transform: scaleY(1);
-		  }
-
-		  50% {
-			
-			transform: scaleY(0);
-		  }
-
-		  100% {
-			transform: scaleY(1);
-			
-		  }
-		}
-        .correct {
-            background-color: green;
-            color: white;
-        }
-        .close {
-            background-color: yellow;
-            color: black;
-        }
-        .default {
-            background-color: lightgray;
-        }
-        .container {
-			display: flex;
-			flex-direction: column; /* Stack elements vertically */
-			align-items: center;
-			text-align: center;
-			width: 100%;
-		}
-		.container {
-			display: flex;
-			flex-direction: column; /* Stack elements vertically */
-			align-items: center;
-			text-align: center;
-			width: 100%;
-		}
-        .result {
-            margin-top: 20px;
-            font-size: 1.5rem;
-        }
-        .video-list {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-			flex-direction: row; /* Ensures the videos appear in a column */
-			align-items: center;
-			margin-bottom: 20px;
-        }
-        .video-item {
-            cursor: pointer;
-            text-align: center;
-			transition: transform 0.3s, border-bottom 0.3s;
-			padding-bottom: 5px;
-			padding-right: 10px;
-			display: inline-block;
-		}
-		.video-item.active {
-			border-bottom: 3px solid #007bff; /* Highlight color */
-			font-weight: bold; /* Make it more noticeable */
-		}
-		.video-item:hover {
-            transform: scale(1.05);
-        }
-        .explanation {
-            font-size: 0.9rem;
-            color: #555;
-            margin-top: 5px;
-        }
-        .answer-table {
-            margin-top: 20px;
-           /* width: 80%;*/
-            margin-left: auto;
-            margin-right: auto;
-            border-collapse: collapse;
-        }
-        .answer-table th, .answer-table td {
-            padding: 10px;
-            border: 1px solid #ddd;
-            text-align: center;
-        }
-        .answer-table th {
-            background-color: #f2f2f2;
-			color: #333;
-        }
-        .correct-row {
-            background-color: green;
-            color: white;
-        }
-        .close-row {
-            background-color: yellow;
-            color: black;
-        }
-        .incorrect-row {
-            background-color: white;
-            color: black;
-        }
-		#videoPlayer video {
-			width: 60%;
-			max-width: 1200px; /* Prevents it from becoming too large on big screens */
-			height: auto;
-			display: block;
-			margin: 20px auto; /* Centers the player */
-			border-radius: 12px; /* Adds a rounded look */
-			box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Adds a slight shadow */
-		}	
-		.video-container {
-			display: flex; /* Ensures proper alignment */
-			justify-content: center; /* Centers the video */
-			align-items: center; /* Centers vertically */
-			width: 50%; /* Adjust width as needed */
-			max-width: 1200px; /* Prevents it from being too large */
-			aspect-ratio: 16 / 9; /* Keeps the correct video aspect ratio */
-			margin: 20px auto; /* Centers the video on the page */
-		}
-
-		.video-container iframe, .video-container object, .video-container embed {
-			width: 100%; /* Makes the iframe take up the full width of its container */
-			height: auto; /* Automatically scales the height */
-			aspect-ratio: 16 / 9; /* Ensures the video maintains a proper aspect ratio */
-			border-radius: 12px; /* Optional: Adds rounded corners */
-			box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Optional: Adds a slight shadow */
-		}
-		
-		@media (max-width: 768px) {
-			.video-list {
-				flex-direction: column;
-				align-items: center;
-			}
-			.input-box {
-				width: 40px;
-				font-size: 1rem;
-			}
-			.top-buttons {
-				right: 5px;
-				top: 5px;
-				gap: 5px;
-			}
-			
-			.button, .toggle-btn {
-				font-size: 0.9rem;  /* Slightly smaller for mobile */
-				padding: 8px 12px;
-			}
-			
-			.top-icons {
-				gap: 5px; /* Less space between icons */
-				padding: 5px 10px;
-			}
-			
-			.logo {
-				font-size: 0.9rem !important; /* Slightly smaller */
-			}
-
-			.top-icons i {
-				font-size: 0.9rem !important; /* Smaller icons */
-			}
-			.video-container{
-				width: 90% !important; 
-				max-width: none;
-			}
-			
-			.video-container iframe, .video-container object, .video-container embed {
-				width: 100%
-			}
-			#helpMenu {
-				font-size: 0.8rem !important;
-			}
-		}
-		
-		.fade-in {
-			animation: fadeIn 0.5s ease-in-out;
-		}
-		@keyframes fadeIn {
-			from { opacity: 0; }
-			to { opacity: 1; }
-		}
-		#hiddenVideos {
-			display: none;
-			opacity: 0;
-			transition: opacity 0.5s ease-in-out;
-		}
-		#hiddenVideos.show {
-			display: block;
-			opacity: 1;
-		}
-		
-		.top-icons {
-			display: flex;
-			justify-content: center; /* Centers icons */
-			align-items: center;
-			gap: 15px;
-			margin: 0 auto; /* Adds spacing and keeps it centered */
-			width: fit-content; /* Only takes as much width as needed */
-			padding: 10px 20px;
-			border-radius: 10px;
-			background: rgba(0, 0, 0, 0.6);
-			backdrop-filter: blur(10px); /* Optional: Adds a nice blur effect */
-			top: 0;
-		}
-		/* "Judgle" Logo Styling */
-		.logo {
-			font-size: 1.8rem;
-			font-weight: bold;
-			color: white;
-			margin-right: 10px; /* Space between text and icons */
-		}
-
-		.light-mode .logo {
-			color: black;
-		}
-		
-		
-		.light-mode .top-icons {
-			background: rgba(255, 255, 255, 0.8);
-		}
-
-		.light-mode .top-icons i {
-			color: black;
-		}
-
-		.top-icons i {
-			font-size: 1.5rem;
-			color: white;
-			cursor: pointer;
-			padding: 10px;
-			border-radius: 50%;
-			transition: none;
-			outline: none; /* Removes default focus outline */
-			user-select: none; /* Prevents text selection */
-			background: transparent; /* Ensures no lingering background */
-		}
-		
-
-		.top-icons i:active {
-			background: transparent; /* Click effect */
-		}
-		.top-icons i:hover {
-			background: rgba(255, 255, 255, 0.7);
-			transform: scale(1.1);
-		}	
-		#warningMessage {
-			position: fixed;
-			top: 50px;
-			left: 50%;
-			transform: translateX(-50%);
-			background-color: rgba(255, 0, 0, 0.8); /* Red background */
-			color: white;
-			padding: 10px 20px;
-			font-size: 1rem;
-			border-radius: 8px;
-			text-align: center;
-			z-index: 1000;
-			opacity: 0; /* Start hidden */
-			transition: opacity 0.5s ease-in-out;
-			
-		}
-
-		/* Show Warning */
-		#warningMessage.show {
-			opacity: 1; /* Fully visible */
-		}
-
-		/* Hide Warning after 5 seconds */
-		@keyframes fadeOut {
-			0% { opacity: 1; }
-			100% { opacity: 0; }
-		}
-		/* Help Icon */
-		.help-icon {
-			cursor: pointer;
-			font-size: 1.5rem;
-			color: white;
-			padding: 10px;
-			border-radius: 50%;
-			transition: background 0.3s ease-in-out, transform 0.2s ease;
-			//position: relative;
-		}
-
-		.help-icon:hover {
-			background: rgba(255, 255, 255, 0.7);
-			transform: scale(1.1);
-		}
-
-		#helpMenu {
-			position: relative;
-			//top: 100%; /* Below the icon bar */
-			left: 50%;
-			transform: translateX(-50%);
-			width: 200px;
-			background: rgba(0, 0, 0, 0.8);
-			color: white;
-			padding: 10px;
-			border-radius: 8px;
-			text-align: left;
-			font-size: 1rem;
-			box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-			opacity: 0;
-			transition: opacity 0.3s ease-in-out;
-			display: none; /* Initially hidden */
-			justify-content: center; /* Centers icons */
-			gap: 15px;
-			width: fit-content; /* Only takes as much width as needed */
-			margin-top: 5px;
-		}
-
-		.light-mode #helpMenu {
-			background: rgba(255, 255, 255, 0.9);
-			color: black;
-		}
-
-		#helpMenu.show {
-			display: block;
-			opacity: 1;
-		}
-}		
-
-}
-		
-</style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="dark-mode">
 	<div class="top-icons">
